NXP-6558 Provide a configurable root service;  NXP-5920	Digital Signature Download server public key/certificate

--- a/nuxeo-platform-signature-web/src/main/resources/l10n/messages_en.properties
+++ b/nuxeo-platform-signature-web/src/main/resources/l10n/messages_en.properties
@@ -3,7 +3,7 @@ label.sign.password=Certificate Password
 label.sign.reason=Signing Reason
 label.sign.prompt=Signing
 label.sign.submit=Sign now
-label.sign.certificate.prompt=You need a certificate to sign documents
+label.sign.certificate.prompt=You need your personal certificate to sign documents
 label.sign.document.missing=Current document missing
 label.sign.attachments.missing=Your document does not contain any attachments
 label.sign.pdf.warning=The attachment must be a PDF
@@ -29,4 +29,5 @@ label.cert.user.email.problem=Check your email address in user setup.
 label.cert.navigate=Go to certificate management
 command.cert=Certificate
 command.cert.generate=Generate Certificate
+command.root.certificate.download=Download the public root certificate for your PDF viewer
 audit.document.signed=PDF signed
