NXP-6572 - Wizard labels improvements

--- a/nuxeo-startup-wizard/src/main/webapp/WEB-INF/classes/messages.properties
+++ b/nuxeo-startup-wizard/src/main/webapp/WEB-INF/classes/messages.properties
@@ -9,14 +9,14 @@ label.welcome.p1 = It is the first time you start your Nuxeo server. This wizard
 label.welcome.p2 = When the 5 steps are completed, the Nuxeo server will automatically be restarted with your configuration. You won't need to configure your application again.
 label.welcome.p3 = This wizard helps you configure the most common parameters, such as database or email configuration, for specific environments. If you want to test and evaluate the platform in the default test configuration, leave the proposed default parameters for each step.
 label.welcome.p4 = For more information:
-label.welcome.p4a = Further administration configuration is available to administrators from the Admin Center.
-label.welcome.p4b = For functional configuration, you should use Nuxeo Studio.
+label.welcome.p4a = For customization and configuration, check out Nuxeo Studio.
+label.welcome.p4b = For administration-related tasks and options, use the Admin Center, included in the product.
 
 label.action.next= Next step
 label.action.skip= Continue without registering
 label.action.retry= Okay, let's register
 label.action.prev= Previous step
-label.action.finish= Validate and restart server
+label.action.finish= Start Nuxeo
 
 label.nuxeo.wizard.progress=Configuration progress
 
@@ -55,7 +55,7 @@ label.nuxeo.db.password = Database password
 label.nuxeo.db.host = Database server host name
 label.nuxeo.db.port = Database server port
 label.dbSettings.warning = The embedded database is only for feature testing purpose. Don't use it in production or for load testing.
-label.dbSettings.oracle.warning = We cannot redistribute Oracle drivers with Nuxeo. You will have to download and install them manually.
+label.dbSettings.oracle.warning = We cannot ship Oracle drivers with Nuxeo. You will have to download and install them manually.
 label.dbSettings.doc = For more details on database configuration, read
 label.dbSettings.doclink = the associated documentation.
 error.dbname.required = You must set the database name.
@@ -101,7 +101,7 @@ label.connectFinish.ko.bad2 = You won't be able to use Nuxeo Studio to configure
 label.connectFinish.ko.free = Are you sure you want to skip Connect trial registration? Connect trial is free of any obligation.
 
 label.recapScreen = Summary
-label.recapScreen.description = Here is the summary of the configuration parameters you have just set.
+label.recapScreen.description = Congratulations, you have just configured your application. Here is the summary of the configuration parameters you have just set.
 label.recapScreen.explanations = Non-default values are in bold.
 label.restart.wait=RESTARTING, PLEASE WAIT...<br /><br />The page will automatically be refreshed when Nuxeo is ready.<br/><br/>If you didn't change the authentication, the credentials will be Administrator/Administrator (login/password).
 
