--- a/nuxeo-startup-wizard/src/main/webapp/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-startup-wizard/src/main/webapp/WEB-INF/classes/messages_fr.properties
@@ -9,14 +9,14 @@ label.welcome.p1 = Comme vous d\u00e9marrez votre serveur Nuxeo pour la premi\u0
 label.welcome.p2 = Une fois la configuration achev\u00e9e, le serveur Nuxeo sera red\u00e9marr\u00e9 avec votre nouvelle configuration. Vous n'aurez plus \u00e0 refaire ces \u00e9tapes de configuration.
 label.welcome.p3 = Cet assistant vous permet de configurer facilement les param\u00e8tres les plus communs pour un environnement sp\u00e9cifique. Si vous souhaitez tester et \u00e9valuer la plateforme dans sa configuration de test par d\u00e9faut, laissez les param\u00e8tres propos\u00e9s par d\u00e9faut \u00e0 chaque \u00e9tape.
 label.welcome.p4 = Pour plus d'informations :
-label.welcome.p4a = pour une configuration plus d\u00e9taill\u00e9e, vous pouvez utiliser l'Admin Center.
-label.welcome.p4b = pour une configuration fonctionnelle, vous devriez utiliser Nuxeo Studio.
+label.welcome.p4a = Pour la personnalisation et la configuration, essayez Nuxeo Studio.
+label.welcome.p4b = Pour les t\u00e2ches d'administration, utilisez l'Admin Center directement depuis votre application.
 
 label.action.next= \u00c9tape suivante
 label.action.skip= Continuer sans s'enregistrer
 label.action.retry= Je veux m'enregistrer
 label.action.prev= \u00c9tape pr\u00e9c\u00e9dente
-label.action.finish= Valider et red\u00e9marrer Nuxeo
+label.action.finish= D\u00e9marrer Nuxeo
 
 label.nuxeo.wizard.progress=Configuration
 
@@ -55,7 +55,7 @@ label.nuxeo.db.password = Mot de passe utilisateur de la base de donn\u00e9es
 label.nuxeo.db.host = Nom d'h\u00f4te du serveur de la base de donn\u00e9es
 label.nuxeo.db.port = Port de la base de donn\u00e9es
 label.dbSettings.warning = La base de donn\u00e9es embarqu\u00e9e est uniquement destin\u00e9e aux tests. Ne l'utilisez pas en production ou pour effectuer des tests de charge.
-label.dbSettings.oracle.warning = Comme nous ne pouvons pas fournir les drivers Oracle avec Nuxeo, vous devrez les t\u00e9l\u00e9charger et les installer manuellement.
+label.dbSettings.oracle.warning = Comme nous ne pouvons pas embarquer les drivers Oracle avec Nuxeo, vous devrez les t\u00e9l\u00e9charger et les installer manuellement.
 label.dbSettings.doc = Pour plus d'informations sur la configuration des bases de donn\u00e9es, vous pouvez consulter
 label.dbSettings.doclink = la documentation associ\u00e9e.
 error.dbname.required = Vous devez saisir le nom de la base de donn\u00e9es.
@@ -99,7 +99,7 @@ label.connectFinish.ko.bad2 = Vous ne pourrez pas utiliser Nuxeo Studio pour con
 label.connectFinish.ko.free = Etes-vous s\u00FBr de ne pas vouloir vous inscrire \u00e0 l'offre d'essai de Nuxeo Connect ? Cette offre est gratuite et sans aucune obligation.
 
 label.recapScreen = R\u00e9sum\u00e9
-label.recapScreen.description = Voici les param\u00e8tres de configuration que vous avez d\u00e9finis.
+label.recapScreen.description = F\u00e9licitations, la configuration de votre application est termin\u00e9e. Voici les param\u00e8tres de configuration que vous avez d\u00e9finis.
 label.recapScreen.explanations = Les valeurs modifi\u00e9es sont en gras.
 label.restart.wait=REDEMARRAGE, VEUILLEZ PATIENTER...<br /><br />La page sera automatiquement rafra\u00eechie quand Nuxeo sera pr\u00eat.<br/><br/>Si vous n'avez pas modifi\u00e9 l'authentification, les identifiants seront Administrator/Administrator (identifiant/mot de passe).
 
