update Copyright to 2011

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -80,7 +80,7 @@ label.login.securityError=Unauthorized user
 
 #: nuxeo-platform/nuxeo-platform-webapp/src/main/resources/nuxeo.war/login-5-1.jsp
 #: nuxeo-platform/nuxeo-platform-webapp/src/main/resources/nuxeo.war/login.jsp
-label.login.copyright=Copyright &copy; 2001-2010 Nuxeo and respective authors.
+label.login.copyright=Copyright &copy; 2001-2011 Nuxeo and respective authors.
 
 #Richtext widget
 label.richtext.format=Format
@@ -90,7 +90,7 @@ mimetype.xml=Xml
 
 ##############################################################################
 #
-# Default to english, just in case
+# Default to English, just in case
 #
 Collaborative= Collaborative Spaces
 Comment.description=Add comment to your Documents
@@ -1016,7 +1016,7 @@ label.log.comment.assignedToGroup=Assigned to group
 label.log.comment.assignedToUser=Assigned to
 label.loggedAsUser=You are logged as #{facesContext.externalContext.userPrincipal.name}
 label.login.IEExtension=IE Extension
-label.login.copyright=Copyright &copy; 2001-2010 Nuxeo and respective authors.
+label.login.copyright=Copyright &copy; 2001-2011 Nuxeo and respective authors.
 label.login.documentation=Documentation
 label.login.firefoxExtension=Firefox Extension
 label.login.forums=Forums
