update Copyright to 2011

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -90,7 +90,7 @@ mimetype.xml=Xml
 
 ##############################################################################
 #
-# Default to english, just in case
+# Default to English, just in case
 #
 Collaborative= Collaborative Spaces
 Comment.description=Add comment to your Documents
