NXP-6416: add nuxeo-platform-directory-web module

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -1404,6 +1404,7 @@ label.vocabulary.name=Vocabulary name
 label.vocabulary.obsolete.no=No
 label.vocabulary.obsolete.yes=Yes
 label.vocabulary.selectValue=Select a value
+label.vocabulary.select=Select a vocabulary:
 label.webContainer=WebContainer
 label.webpage.creation.date=Created
 label.webpage.modification.date=Modified
