--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -734,6 +734,7 @@ label.vocabulary.entry.obsolete=Obsolete
 label.vocabulary.entry.order=Order
 label.vocabulary.entry.parent=Parent
 label.vocabulary.name=Vocabulary name
+label.vocabulary.select=Select a vocabulary:
 
 title.create.vocabulary.entry=Add a new vocabulary entry
 title.vocabulary.details=#{vocabularyActions.selectedVocabularyName} vocabulary details
