--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -747,6 +747,7 @@ message.versioning.editoptionsinfo.undefined=Options de gestion de version non d
 error.versioning.none_selected=Veuillez s\u00E9lectionner une option de gestion des versions.
 
 label.vocabulary.selectValue=S\u00E9lectionnez une valeur.
+label.vocabulary.select=S\u00E9lectionnez un vocabulaire :
 label.vocabulary.obsolete.yes=Oui
 label.vocabulary.obsolete.no=Non
 label.order.ascending=Croissant
