NXP-6628: do not display the pagination if we have only one page

--- a/nuxeo-opensocial-gadgets/src/main/resources/OSGI-INF/l10n/messages.properties
+++ b/nuxeo-opensocial-gadgets/src/main/resources/OSGI-INF/l10n/messages.properties
@@ -1,3 +1,4 @@
 label.gadget.lastpublisheddocuments=Last published documents
 label.gadget.lastdocuments=Last modified documents
 label.gadget.userdeleteddocuments=Trash
+label.gadget.no.document=There is no document to show
