NXP-5791: Improve the help message for multiple sort on content views

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -1695,6 +1695,8 @@ label.exportview.zipExport=ZIP XML Export
 label.exportview.zipTreeExport=ZIP Tree XML Export
 label.exportview.zipBlobExport=ZIP Binary Export
 contentview.sort.help=Click on the column title to perform a single sort, and click on the arrows to add sorting criteria to existing ones. Click again to change sort direction.
+contentview.setSort.help=Click on the column title to perform a single sort. Click again to change sort direction.
+contentview.addSort.help=Click on the arrow to add sorting criteria to existing ones. Click again to change sort direction.
 backToWork=Back to work
 command.option.liveedit.preeditaction.Lock=Lock document ?
 documentCopied=Document copied
