--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -1874,6 +1874,8 @@ label.byTagNavigation=Browse by tags
 # content view
 label.contentview.pageSize=Items/page
 contentview.sort.help=Click on the column title to perform a single sort, and click on the arrows to add sorting criteria to existing ones. Click again to change sort direction.
+contentview.setSort.help=Click on the column title to perform a single sort. Click again to change sort direction.
+contentview.addSort.help=Click on the arrow to add sorting criteria to existing ones. Click again to change sort direction.
 label.contentview.exportLinks=Export links
 label.contentview.export.csv=CSV Export
 label.contentview.export.xl=Excel Export
