--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -1868,6 +1868,8 @@ label.byTagNavigation=Navigation par tags
 # content view
 label.contentview.pageSize=Documents/page:
 contentview.sort.help=Cliquez sur le titre de la colonne pour trier sur un seul crit\u00E8re, et cliquez sur les fl\u00E8ches pour ajouter de nouveaux crit\u00E8res de tri. Cliquez \u00E0 nouveau pour changer le sens du tri.
+contentview.setSort.help=Cliquez sur le titre de la colonne pour trier sur un seul crit\u00E8re. Cliquez \u00E0 nouveau pour changer le sens du tri.
+contentview.addSort.help=Cliquez sur la fl\u00E8che pour ajouter un crit\u00E8re de tri aux crit\u00E8res existants. Cliquez \u00E0 nouveau pour changer le sens du tri.
 label.contentview.exportLinks=Liens d'export
 label.contentview.export.csv=Export CSV
 label.contentview.export.xl=Export Excel
