NXP-6655: context-chooser-ui.ftl: i18n for "Setings"

--- a/nuxeo-webengine-gadgets/src/main/resources/skin/resources/i18n/common_messages.properties
+++ b/nuxeo-webengine-gadgets/src/main/resources/skin/resources/i18n/common_messages.properties
@@ -10,3 +10,4 @@ label.context.all=All repository
 command.save=Save
 label.context.edit=Edit context settings
 label.target.repository=Target repository
+label.context.settings=Settings
