--- a/nuxeo-opensocial-gadgets/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-opensocial-gadgets/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -2,3 +2,4 @@ label.gadget.lastpublisheddocuments=Last published documents
 label.gadget.lastdocuments=Last modified documents
 label.gadget.userdeleteddocuments=Trash
 label.gadget.no.document=There is no document to show
+label.gadget.edit=Edit
