NXP-4936: preview improvements

--- a/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -27,6 +27,7 @@ label.layoutDemo.widgetPreview.properties=Properties
 label.layoutDemo.widgetPreview.preview=Preview
 
 label.layoutDemo.widgetPreview.label=Label
+label.layoutDemo.widgetPreview.help=Change the properties in the form below to preview the generated widget. 
 label.layoutDemo.widgetPreview.helpLabel=Help label
 label.layoutDemo.widgetPreview.translated=Translated
 label.layoutDemo.widgetPreview.customProperties=Custom properties
