NXP-6670 - verify user write permissions before signing

--- a/nuxeo-platform-signature-web/src/main/resources/l10n/messages_en.properties
+++ b/nuxeo-platform-signature-web/src/main/resources/l10n/messages_en.properties
@@ -8,6 +8,7 @@ label.sign.document.missing=Current document missing
 label.sign.attachments.missing=Your document does not contain any attachments
 label.sign.pdf.warning=The attachment must be a PDF
 label.sign.document.mime=MIME information missing for your document
+label.sign.modify.permission.warning=You are not permitted to sign this document
 notification.sign.signed=has been signed
 notification.sign.certificate.access.problem=Problem accessing your certificate. Make sure your password is correct.
 notification.sign.problem=PDF signing problem
