NXP-6616: add French traduction labe

--- a/nuxeo-admin-center/nuxeo-admin-center-oauth-opensocial/src/main/resources/OSGI-INF/l10n/messages_en.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center-oauth-opensocial/src/main/resources/OSGI-INF/l10n/messages_en.properties
@@ -14,6 +14,9 @@ adminsubtab.oauth.providersTokens = Tokens granted by Service providers to Nuxeo
 adminsubtab.oauth.serverKey = Nuxeo Server OAuth keys
 adminsubtab.oauth.externalGadgets = External gadgets management
 
+label.oauth.keyName  = Key Name
+label.oauth.certificate = Certificate
+
 label.oauth.help.consumerKey = ConsumerKey identifying the consumer
 label.oauth.help.consumerSecret = HMAC secret used by the consumer to sign the requests (HMAC mode)
 label.oauth.help.publicKey = RSA public key used by the consumer to sign the request (RSA mode)
@@ -21,6 +24,11 @@ label.oauth.help.enabled = Consumer will be able to access Nuxeo only if enabled
 label.oauth.help.description = Small description of the consumer
 label.oauth.help.signedFetchSupport = Defines if consumer can use signed fetch (2 legged OAuth) to access Nuxeo.
 label.oauth.help.callbackURL = Callback url if not defined by the widget
+label.oauth.help.gadgetUrl =
+label.oauth.help.serviceName=
+label.oauth.help.requestTokenURL =
+label.oauth.help.userAuthorizationURL =
+label.oauth.help.accessTokenURL =
 
 label.signedfetch.none = Not allowed (i.e. : only support 3 legged)
 label.signedfetch.opensocialViewer = Supported (use OpenSocial Viewer Id as Login)
@@ -29,6 +37,6 @@ label.signedfetch.dedicatedUser = Supported (use dedicated Nuxeo user)
 label.signedfetch.dedicatedUser.login = Nuxeo login to use
 
 title.create.consumer.entry = Add new Consumer
+title.create.entry = Add
 
-
-
+command.refresh = Refresh
