NXP-6248 - Add nuxeo shell to admin center

--- a/nuxeo-admin-center/nuxeo-admin-center-monitoring/src/main/resources/OSGI-INF/l10n/messages.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center-monitoring/src/main/resources/OSGI-INF/l10n/messages.properties
@@ -2,9 +2,11 @@ admcommand.monitoring = Monitoring
 adminsubtab.monitoring.adminStatus = Administrative Statuses
 adminsubtab.monitoring.adminProbes = Probes
 adminsubtab.monitoring.events = Nuxeo Event Bus
+adminsubtab.monitoring.shell=Nuxeo Shell
 tab.monitoring.status = Administrative Statuses
 tab.monitoring.probes = Probes
 tab.monitoring.events = Nuxeo Event Bus
+tab.monitoring.shell=Shell
 
 label.monitoring.multiserver = Your Nuxeo Application includes several instances
 label.monitoring.instanceList =  List of Nuxeo Instances
@@ -70,6 +72,5 @@ label.monitoring.eventStats.listenerClass=Listener Class
 label.monitoring.eventStats.listenerCalls=Number of calls
 label.monitoring.eventStats.listenerTime=Total time
 label.monitoring.eventStats.listenerPercent=%
-
 
 label.monitoring.events.refresh=Refresh
