--- a/nuxeo-admin-center/nuxeo-admin-center-monitoring/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-admin-center/nuxeo-admin-center-monitoring/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -1,16 +1,16 @@
 admcommand.monitoring = Monitoring
 adminsubtab.monitoring.adminStatus = Statuts Administratifs
 adminsubtab.monitoring.adminProbes = Sondes
-adminsubtab.monitoring.events = Bus d'évènements Nuxeo
+adminsubtab.monitoring.events = Bus d'\u00e9v\u00e8nements Nuxeo
 tab.monitoring.status = Statuts Administratifs
 tab.monitoring.probes = Sondes
-tab.monitoring.events = Bus d'évènements Nuxeo
+tab.monitoring.events = Bus d'\u00e9v\u00e8nements Nuxeo
 
 label.monitoring.multiserver = Votre application Nuxeo comprend plusieurs instances.
 label.monitoring.instanceList =  Liste des instances Nuxeo :
 label.monitoring.monoserver = Votre application Nuxeo n'a qu'une seule instance :
 
-label.monitoring.status.label = Label
+label.monitoring.status.label = Libell\u00e9
 label.monitoring.status.serviceId = Service Id
 label.monitoring.status.state = Statut
 label.monitoring.status.message= Message
@@ -18,9 +18,9 @@ label.monitoring.status.description=Description
 label.monitoring.status.action= Action
 action.monitoring.edit=Modifier
 
-label.monitoring.probe.label = Label
+label.monitoring.probe.label = Libell\u00e9
 label.monitoring.probe.id = Id
-label.monitoring.probe.success = Succès
+label.monitoring.probe.success = Succ\u00e8s
 label.monitoring.probe.status = Resultat
 label.monitoring.probe.history = Historique
 label.monitoring.probe.count = Compteurs
@@ -28,12 +28,12 @@ label.monitoring.probe.lastDuration = Temps
 label.monitoring.probe.description = Description
 label.monitoring.probe.action=Action
 
-label.monitoring.probe.lastRun = last run
-label.monitoring.probe.lastSuccess = last success
-label.monitoring.probe.lastFailure = last failure
-label.monitoring.probe.countRun = total executions
-label.monitoring.probe.countSuccess = successful executions
-label.monitoring.probe.countFailure = failed executions
+label.monitoring.probe.lastRun = dernier lancement
+label.monitoring.probe.lastSuccess = dernier succ\u00e8s
+label.monitoring.probe.lastFailure = dernier \u00e9chec
+label.monitoring.probe.countRun = ex\u00e9cutions totales
+label.monitoring.probe.countSuccess = ex\u00e9cutions r\u00e9ussies
+label.monitoring.probe.countFailure = ex\u00e9cutions \u00e9chou\u00e9es
 
 action.monitoring.passivate = Passifier
 action.monitoring.activate = Activer
@@ -43,33 +43,32 @@ action.monitoring.cancel = Annuler
 
 label.monitoring.status.currentState = Statut
 label.monitoring.status.newState = Nouveau statut
-label.monitoring.status.lastUpdate = Dernière mise à jour
+label.monitoring.status.lastUpdate = Derni\u00e8re mise \u00e0 jour
 label.monitoring.status.login = Dernier participant
 
 label.status.active = Actif
 label.status.passive = Passif
 
 label.monitoring.eventStats=Collectez les statistiques des Events Listeners.
-label.monitoring.events.synctracking.on=Suivi des évènements synchrones activé
-label.monitoring.events.synctracking.off=Suivi des évènements synchrones désactivé
-label.monitoring.events.asynctracking.on=Suivi des évènements asynchrones activé
-label.monitoring.events.asynctracking.off=Suivi des évènements asynchrones désactivé
+label.monitoring.events.synctracking.on=Suivi des \u00e9v\u00e8nements synchrones activ\u00e9
+label.monitoring.events.synctracking.off=Suivi des \u00e9v\u00e8nements synchrones d\u00e9sactiv\u00e9
+label.monitoring.events.asynctracking.on=Suivi des \u00e9v\u00e8nements asynchrones activ\u00e9
+label.monitoring.events.asynctracking.off=Suivi des \u00e9v\u00e8nements asynchrones d\u00e9sactiv\u00e9
 
-label.monitoring.events.synctracking.switch.off=Désactiver
+label.monitoring.events.synctracking.switch.off=D\u00e9sactiver
 label.monitoring.events.synctracking.switch.on=Activer
-label.monitoring.events.asynctracking.switch.off=Désactiver
+label.monitoring.events.asynctracking.switch.off=D\u00e9sactiver
 label.monitoring.events.asynctracking.switch.on=Activer
 
-label.monitoring.eventStats.syncStats=Statistiques sur l'activité des listeners synchrones
-label.monitoring.eventStats.asyncStats=Statistiques sur l'activité des listeners asynchrones
+label.monitoring.eventStats.syncStats=Statistiques sur l'activit\u00e9 des listeners synchrones
+label.monitoring.eventStats.asyncStats=Statistiques sur l'activit\u00e9 des listeners asynchrones
 label.monitoring.eventStats.noStats=Pas de statistique disponible
 label.monitoring.eventStats.threads=Threads actifs
-label.monitoring.eventStats.queuedEvents=Evènements en attente
+label.monitoring.eventStats.queuedEvents=Ev\u00e8nements en attente
 label.monitoring.eventStats.listenerId=Listener Id
 label.monitoring.eventStats.listenerClass=Listener Class
 label.monitoring.eventStats.listenerCalls=Nombre d'appels
 label.monitoring.eventStats.listenerTime=Temps total
 label.monitoring.eventStats.listenerPercent=%
 
-
-label.monitoring.events.refresh=Rafraîchir
+label.monitoring.events.refresh=Rafra\u00eechir
