NXP-6326: add translations

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -1684,6 +1684,10 @@ label.contentview.document_content=Document content
 label.contentview.document_trash_content=Trash content
 label.contentview.section_content=Section content
 label.contentview.orderable_document_content=Orderable document content
+label.contentview.filter.title=Filter
+label.contentview.filter.filterAction=Filter
+label.contentview.filter.clearFilter=Clear filter
+label.contentview.filter.clearFilterButton=Clear
 label.exportview=Export view
 label.exportview.document=Document export
 label.exportview.contentviews=Content Views Export
