--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -1886,6 +1886,10 @@ label.contentview.export.rss.titleWithDocument=RSS feed for document ''{0}'' and
 label.contentview.export.atom=ATOM Export
 label.contentview.export.atom.title=ATOM feed for content view ''{0}''
 label.contentview.export.atom.titleWithDocument=ATOM feed for document ''{0}'' and content view ''{1}''
+label.contentview.filter.title=Filter
+label.contentview.filter.filterAction=Filter
+label.contentview.filter.clearFilter=Clear filter
+label.contentview.filter.clearFilterButton=Clear
 
 # default content views
 label.contentview.document_content=Document content
