--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -1880,6 +1880,10 @@ label.contentview.export.rss.titleWithDocument=Flux RSS pour le document ''{0}''
 label.contentview.export.atom=Export ATOM
 label.contentview.export.atom.title=Flux ATOM pour la vue de contenu ''{0}''
 label.contentview.export.atom.titleWithDocument=Flux ATOM pour le document ''{0}'' et la vue de contenu''{1}''
+label.contentview.filter.title=Filtre
+label.contentview.filter.filterAction=Filtrer
+label.contentview.filter.clearFilter=R\u00E9initialiser le filtre
+label.contentview.filter.clearFilterButton=R\u00E9initialiser
 
 # default content views
 label.contentview.document_content=Contenu du document
