small fixes for NXP-6566: fix the event name in the event log, modify labels & messages, fix layout inside the signature tab, add headings in signature, clean-up facelet code, fix navigation to the user certificate tab

--- a/nuxeo-platform-signature-web/src/main/resources/l10n/messages_en.properties
+++ b/nuxeo-platform-signature-web/src/main/resources/l10n/messages_en.properties
@@ -1,7 +1,9 @@
 label.sign.title=Digital Signature
 label.sign.password=Certificate Password
+label.heading.document.signature=Document Signature
+label.heading.root.certificate=Root Certificate
 label.sign.reason=Signing Reason
-label.sign.prompt=Signing
+label.sign.prompt=Signing File
 label.sign.submit=Sign now
 label.sign.certificate.prompt=You need your personal certificate to sign documents
 label.sign.document.missing=Current document missing
@@ -13,8 +15,9 @@ notification.sign.signed=has been signed
 notification.sign.certificate.access.problem=Problem accessing your certificate. Make sure your password is correct.
 notification.sign.problem=PDF signing problem
 label.sign.document.signed=This document is signed
+label.sign.document.not.signed=This document is not signed
 label.cert.password.missing=Please enter password twice
-label.cert.password.mismatch=Supplied passwords do not match
+label.cert.password.mismatch=Passwords do not match
 label.cert.missing=You do not have a certificate yet
 label.cert.password.too.short=Your password is too short, it must be at least 8 characters
 label.cert.password.first=Password
@@ -26,9 +29,10 @@ label.cert.certificate.goto=Go to Certificate Management
 label.cert.generate.problem=Problem generating certificate. Check the logs.
 label.cert.user.firstname.missing=First name missing in user setup
 label.cert.user.lastname.missing=Last name missing in user setup
-label.cert.user.email.problem=Check your email address in user setup.
+label.cert.user.email.problem=Please enter a valid email address under your user settings.	
 label.cert.navigate=Go to certificate management
 command.cert=Certificate
 command.cert.generate=Generate Certificate
 command.root.certificate.download=Download the public root certificate for your PDF viewer
 audit.document.signed=PDF signed
+documentSigned=Document signed
