NXP-6566:Functional/business and UI improvements

--- a/nuxeo-platform-signature-web/src/main/resources/l10n/messages_en.properties
+++ b/nuxeo-platform-signature-web/src/main/resources/l10n/messages_en.properties
@@ -3,7 +3,7 @@ label.sign.password=Certificate Password
 label.heading.document.signature=Document Signature
 label.heading.root.certificate=Root Certificate
 label.sign.reason=Signing Reason
-label.sign.prompt=Signing File
+label.sign.prompt=File
 label.sign.submit=Sign now
 label.sign.certificate.prompt=You need your personal certificate to sign documents
 label.sign.document.missing=Current document missing
@@ -19,14 +19,15 @@ label.sign.document.not.signed=This document is not signed
 label.cert.password.missing=Please enter password twice
 label.cert.password.mismatch=Passwords do not match
 label.cert.missing=You do not have a certificate yet
+label.cert.password.prompt=Enter the secret phrase to be used for your certificate:
 label.cert.password.too.short=Your password is too short, it must be at least 8 characters
 label.cert.password.first=Password
 label.cert.password.second=Password (confirm)
-label.cert.passwordSameAsLogin=Your certificate password should be different from your login password
+label.cert.password.is.login.password=Your certificate password should be different from your login password
 label.cert.created=Certificate created
 label.root.certificate.download=Download root certificate
 label.cert.certificate.goto=Go to Certificate Management
-label.cert.generate.problem=Problem generating certificate. Check the logs.
+label.cert.generate.problem=Problem generating the certificate. Check the logs.
 label.cert.user.firstname.missing=First name missing in user setup
 label.cert.user.lastname.missing=Last name missing in user setup
 label.cert.user.email.problem=Please enter a valid email address under your user settings.	
