NXP-6673 Add ids for better testing NXP-6716 Fix small bugs

--- a/nuxeo-startup-wizard/src/main/webapp/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-startup-wizard/src/main/webapp/WEB-INF/classes/messages_fr.properties
@@ -44,6 +44,7 @@ label.proxySettings.anonymous = Proxy anonyme
 label.proxySettings.authenticated = Proxy authentifi\u00e9
 error.nuxeo.http.proxy.port = Le port doit \u00eatre un nombre.
 error.nuxeo.http.proxy.emptyHost = Le nom d'h\u00f4te du proxy doit \u00eatre pr\u00e9cis\u00e9
+error.nuxeo.http.proxy.emptyLogin = Le login du proxy doit \u00eatre pr\u00e9cis\u00e9
 label.dbSettings = Configuration de la base de donn\u00e9es
 label.dbSettings.description = Nuxeo fonctionne avec plusieurs bases de donn\u00e9es. Vous pouvez choisir la base de donn\u00e9es qui sera utilis\u00e9e par le serveur Nuxeo.
 label.dbSettings.explanations = Par d\u00e9faut, Nuxeo est livr\u00e9 avec une base embarqu\u00e9e, uniquement destin\u00e9e aux tests. Pour tester l'application sans base de donn\u00e9es, laissez le choix par d\u00e9faut. Vous pouvez \u00e9galement configurer un serveur de base de donn\u00e9es adapt\u00e9 \u00e0 un environnement de production ou aux tests de charges.
