--- a/nuxeo-startup-wizard/src/main/webapp/WEB-INF/classes/messages.properties
+++ b/nuxeo-startup-wizard/src/main/webapp/WEB-INF/classes/messages.properties
@@ -44,6 +44,7 @@ label.proxySettings.anonymous = Anonymous proxy
 label.proxySettings.authenticated = Authenticated proxy
 error.nuxeo.http.proxy.port = Port must be a number.
 error.nuxeo.http.proxy.emptyHost = Please enter a hostname for the proxy
+error.nuxeo.http.proxy.emptyLogin = Please enter a Login for the proxy
 label.dbSettings = Database settings
 label.dbSettings.description = Nuxeo works with several databases. Here you can select and configure the database you want to use.
 label.dbSettings.explanations = Nuxeo comes with an embedded database, designed for testing only. For testing and platform evaluation, leave the default database type.
