NXP-6706: add a summary widget that displays actions on a given catagory

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -1332,6 +1332,7 @@ label.suggestion.noSearchResults=No result
 label.suggestion.noSearchResultsOrSearchOverflow=No result or too many results
 label.summary.by= by
 label.summary.comments= Comments ({0})
+label.summary.customActions=Custom actions
 label.summary.download.attachments= Attachments
 label.summary.download.file=Main File
 label.summary.edit= Edit
