--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -1543,6 +1543,7 @@ action.view.manage=Manage
 label.and= and
 
 label.summary.restoreDeletedDocument=This document is in the trash now
+label.summary.customActions=Custom actions
 
 # XXX: some messages are missing from fr
 label.summary.download.file=Main File
