--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -1522,6 +1522,7 @@ label.summary.relations.none= Ce document n'est li\u008E \u0088 aucun document
 label.summary.characteristics.title= Caract\u008Eristiques
 
 label.summary.restoreDeletedDocument=Ce document est dans la corbeille
+label.summary.customActions=Actions suppl\u008mentaires
 
 label.summary.download.file=Fichier Principal
 label.summary.download.attachments= Pièces jointes
