NXP-6724: UI for default import type

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -1912,5 +1912,6 @@ label.local.configuration.uiTypes=Configuration des types de documents
 label.local.configuration.uiTypes.info=Pour d\u00E9finir quels types de document peuvent \u00EAtre cr\u00E9\u00E9s depuis votre espace, cliquez sur le bouton "Activer" et s\u00E9lectionnez les types de document qui seront disponibles \u00E0 la cr\u00E9ation. Note : par d\u00E9faut, tous les types de document sont autoris\u00E9s. S\u00E9lectionnez les types \u00E0 filtrer en les ajoutant \u00E0 la colonne de gauche.
 label.local.configuration.ui.types.allowedTypesSelection=S\u00E9lectionner les types de documents qui peuvent \u00EAtre cr\u00E9\u00E9s
 label.local.configuration.ui.types.denyAllTypes=Interdire tous les types
+label.local.configuration.ui.defaultType=Type par défaut
 label.local.configuration.selection.availableUITypes=Types existants
 label.local.configuration.selection.selectedUITypes=Types activ\u00E9s
