NXP-6628: improve quicksearch gadget

--- a/nuxeo-opensocial-gadgets/src/main/resources/OSGI-INF/l10n/messages.properties
+++ b/nuxeo-opensocial-gadgets/src/main/resources/OSGI-INF/l10n/messages.properties
@@ -3,3 +3,4 @@ label.gadget.lastdocuments=Last modified documents
 label.gadget.userdeleteddocuments=Trash
 label.gadget.no.document=There is no document to show
 label.gadget.edit=Edit
+label.gadget.quicksearch.description=Type a text to start the document search
