--- a/nuxeo-opensocial-gadgets/src/main/resources/OSGI-INF/l10n/messages_fr.properties
+++ b/nuxeo-opensocial-gadgets/src/main/resources/OSGI-INF/l10n/messages_fr.properties
@@ -3,3 +3,4 @@ label.gadget.lastdocuments=Derniers documents modifi\u00E9s
 label.gadget.userdeleteddocuments=Corbeille
 label.gadget.no.document=Il n\\'y a aucun document \u00E0 afficher
 label.gadget.edit=Modifier
+label.gadget.quicksearch.description=Tapez un texte pour d\u00E9marrer la recherche
