NXP-6651: Align name of the widget in the "add a widdget" pop up and in the widget box

--- a/nuxeo-opensocial-gadgets/src/main/resources/OSGI-INF/l10n/messages.properties
+++ b/nuxeo-opensocial-gadgets/src/main/resources/OSGI-INF/l10n/messages.properties
@@ -1,6 +1,7 @@
 label.gadget.lastpublisheddocuments=Last published documents
 label.gadget.lastdocuments=Last modified documents
-label.gadget.userdeleteddocuments=Trash
+label.gadget.userdeleteddocuments=My deleted documents
 label.gadget.no.document=There is no document to show
 label.gadget.edit=Edit
 label.gadget.quicksearch.description=Type a text to start the document search
+label.gadget.quicksearch=Quick Search
