NXP-6742 : Use local configuration instead of placeful service to manage local themes

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -813,7 +813,6 @@ label.theme.local.theme=Theme
 label.user.processes=The workflows you are currently managing are listed below
 
 title.dashboard.userProcesses=My workflows
-title.header.localThemeConfiguration=Local theme configuration
 title.imageUpload.form=Insert an image
 title.last.published.documents=Last published documents
 tooltip.content.select.all=Select all / deselect all
@@ -1922,3 +1921,5 @@ label.local.configuration.ui.types.denyAllTypes=Deny all types
 label.local.configuration.ui.defaultType=Default type
 label.local.configuration.selection.availableUITypes=Existing types
 label.local.configuration.selection.selectedUITypes=Enabled types
+label.local.configuration.theme=Theme configuration
+label.local.configuration.theme.info=To set a different theme in your space, click on the "Enable" button and select the theme you want to use.
