--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -1142,7 +1142,6 @@ Templates=Mod\u00e8les
 Default_Domain=Domaine par d\u00e9faut
 
 # Local themes
-title.header.localThemeConfiguration=Choisir un habillage
 label.theme.local.theme=Th\u00e8me
 label.theme.local.page=Page
 label.theme.local.perspective=Perspective
@@ -1916,3 +1915,5 @@ label.local.configuration.ui.types.denyAllTypes=Interdire tous les types
 label.local.configuration.ui.defaultType=Type par d\u00e9faut
 label.local.configuration.selection.availableUITypes=Types existants
 label.local.configuration.selection.selectedUITypes=Types activ\u00e9s
+label.local.configuration.theme=Configuration du th\u00E8me
+label.local.configuration.theme.info=Pour d\u00E9finir un th\u00E8me diff\u00E9rent depuis votre espace, cliquez sur le bouton "Activer" et s\u00E9lectionnez le th\u00E8me d\u00E9sir\u00E9.
