--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages.properties
@@ -1590,7 +1590,6 @@ title.domainSearch=Last modified documents
 title.edit=Edit
 title.email.document=Send a document via email
 title.header.domain=Domain #{currentDomain.dublincore.title}
-title.header.localThemeConfiguration=Local theme configuration
 title.header.server=Domains on #{currentServerLocation.name} server
 title.imageUpload.form=Insert an image
 title.last.published.comments=Last published comments
@@ -1778,3 +1777,5 @@ label.local.configuration.ui.types.denyAllTypes=Deny all types
 label.local.configuration.ui.defaultType=Default type
 label.local.configuration.selection.availableUITypes=Existing types
 label.local.configuration.selection.selectedUITypes=Enabled types
+label.local.configuration.theme=Theme configuration
+label.local.configuration.theme.info=To set a different theme in your space, click on the "Enable" button and select the theme you want to use.
