NXP-6764: use local configuration to select advanced search content view

--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_en.properties
@@ -1919,6 +1919,9 @@ label.local.configuration.uiTypes.info=To set which document types can be create
 label.local.configuration.ui.types.allowedTypesSelection=Select the document types that can be created
 label.local.configuration.ui.types.denyAllTypes=Deny all types
 label.local.configuration.ui.defaultType=Default type
+label.local.configuration.search.info=Search Configuration
+label.local.configuration.search=Search Configuration
+label.local.configuration.advancedSearchView=Advanced search view
 label.local.configuration.selection.availableUITypes=Existing types
 label.local.configuration.selection.selectedUITypes=Enabled types
 label.local.configuration.theme=Theme configuration
