--- a/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
+++ b/nuxeo-platform-lang/src/main/resources/web/nuxeo.war/WEB-INF/classes/messages_fr.properties
@@ -1913,6 +1913,9 @@ label.local.configuration.uiTypes.info=Pour d\u00e9finir quels types de document
 label.local.configuration.ui.types.allowedTypesSelection=S\u00e9lectionner les types de documents qui peuvent \u00eatre cr\u00e9\u00e9s
 label.local.configuration.ui.types.denyAllTypes=Interdire tous les types
 label.local.configuration.ui.defaultType=Type par d\u00e9faut
+label.local.configuration.search.info=Configuration de la recherche
+label.local.configuration.search=Configuration de la recherche
+label.local.configuration.advancedSearchView=Vue recherche avancée
 label.local.configuration.selection.availableUITypes=Types existants
 label.local.configuration.selection.selectedUITypes=Types activ\u00e9s
 label.local.configuration.theme=Configuration du th\u00E8me
