NXP-6772 - In layout manager, never remove the last zone

--- a/nuxeo-opensocial-container/src/main/java/org/nuxeo/opensocial/container/client/ContainerConstants_fr.properties
+++ b/nuxeo-opensocial-container/src/main/java/org/nuxeo/opensocial/container/client/ContainerConstants_fr.properties
@@ -22,3 +22,4 @@ save = Sauvegarder
 choose = Choisir
 createdBy = Crée par
 folderSelection = Séléction d'un dossier
+cantDeleteLastZoneError = Au moins une zone doit être définie.
